Restricts MHTML loading to top frames. Also disabling JavaScript for MHTML documents. Because JavaScipt is now disabled, MHTML layout tests had to be changed not to use JavaScript anymore.
BUG=330663
TEST=Run MHTML layout tests.
R=abarth@chromium.org, jschuh@chromium.org

Review URL: https://codereview.chromium.org/161383002

git-svn-id: svn://svn.chromium.org/blink/trunk@169499 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/mhtml/transfer_encoding_7bit-expected.html
+++ b/LayoutTests/mhtml/transfer_encoding_7bit-expected.html
@@ -5,6 +5,6 @@
   <title>MHTML Tests</title>
  </head>
  <body>
-  <h1>MHTML Relaxed Content-Type parameters test</h1>
+  <h1>MHTML Content-Transfer-Encoding 7-bit test - ;)</h1>
  </body>
 </html>
