--- a/LayoutTests/mhtml/multi_frames_unmht-expected.html
+++ b/LayoutTests/mhtml/multi_frames_unmht-expected.html
@@ -5,9 +5,9 @@
 <title>A page that contains multiple nested frames</title>
 </head><body>
 This page contains several frames.<br>
-<iframe src="multi_frames_files/frame_0.html"></iframe><br>
-<iframe src="multi_frames_files/frame_1.html"></iframe><br>
-<iframe src="multi_frames_files/frame_2.html"></iframe><br>
+<iframe src="resources/frame_0.html"></iframe><br>
+<iframe src="resources/frame_1.html"></iframe><br>
+<iframe src="resources/frame_2.html"></iframe><br>
 And a red square:<br>
-<img src="frame_4_data/red_square.png">
+<img src="resources/red_square.png">
 </body></html>
