--- a/LayoutTests/mhtml/simple_page_unmht-expected.html
+++ b/LayoutTests/mhtml/simple_page_unmht-expected.html
@@ -1,7 +1,9 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+
+<title>A simple page</title>
 </head><body>
-This is frame 4!<br>
-<img src="frame_4_files/red_square.png">
+<h1>This is a very simple page</h1>
+Very <b>basic</b> page.
 </body></html>
