ConvolverNode.buffer sample rate must match AudioContext rate
Throw an exception as required when the sample rate of the convolver
node buffer does not match the sample rate of the audio context.

Added test for this case.

BUG=352776

Review URL: https://codereview.chromium.org/200543005

git-svn-id: svn://svn.chromium.org/blink/trunk@169501 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/webaudio/dom-exceptions.html
+++ b/LayoutTests/webaudio/dom-exceptions.html
@@ -165,6 +165,13 @@ function runTest() {
     node.connect(context.destination);
     shouldThrow("node.gain.exponentialRampToValueAtTime(-1, 0.1)");
     shouldThrow("node.gain.exponentialRampToValueAtTime(0, 0.1)");
+
+    // Convolver buffer rate must match context rate. Create on offline context so we
+    // specify the context rate exactly, in case the test is run on platforms with different
+    // HW sample rates.
+    shouldNotThrow("oc = new webkitOfflineAudioContext(1, 44100, 44100)");
+    shouldNotThrow("conv = oc.createConvolver()");
+    shouldThrow("conv.buffer = oc.createBuffer(1, 100, 22050)");
 }
 
 runTest();
