[CSS Font Loading] Remove FontFace#ready, fold its functionality into FontFace#load
As per a discussion on www-style [1], FontFace#ready is removed from the
spec [2], and FontFace#load() is changed to return a Promise which
fulfills when the font is ready.

[1] http://lists.w3.org/Archives/Public/www-style/2014Mar/0069.html
[2] http://dev.w3.org/csswg/css-font-loading/

TEST=fast/css/fontface-methods.html
BUG=53213

Review URL: https://codereview.chromium.org/184633005

git-svn-id: svn://svn.chromium.org/blink/trunk@169507 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/css/fontface-arraybuffer.html
+++ b/LayoutTests/fast/css/fontface-arraybuffer.html
@@ -25,7 +25,7 @@ document.fonts.add(face2);
 
 var face3 = new FontFace('FontFromEmptyArrayBuffer', new ArrayBuffer(0), {});
 shouldBeEqualToString('face3.status', 'error');
-face3.ready().catch(function(v) {
+face3.load().catch(function(v) {
     rejectionValue = v;
     shouldBeEqualToString('rejectionValue.name', 'SyntaxError');
     document.fonts.ready().then(verify);
