Convert some repaint tests to not call display()
BUG=345027

Review URL: https://codereview.chromium.org/196353013

git-svn-id: svn://svn.chromium.org/blink/trunk@169508 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/css3/flexbox/repaint-rtl-column.html
+++ b/LayoutTests/css3/flexbox/repaint-rtl-column.html
@@ -33,17 +33,25 @@ function setFlex(value)
 
 window.onload = function() {
     if (window.testRunner) {
-        testRunner.dumpAsTextWithPixelResults();
+        testRunner.dumpAsText();
         document.body.offsetTop;
-        testRunner.display();
+        window.internals.startTrackingRepaints(document);
         testRunner.waitUntilDone();
     }
     setTimeout(function() {
         setFlex(4.6);
         setTimeout(function() {
             setFlex(5);
-            if (window.testRunner)
+            if (window.testRunner) {
+                document.body.offsetTop;
+                var repaintRects = window.internals.repaintRectsAsText(document);
+                window.internals.stopTrackingRepaints(document);
+                var pre = document.createElement('pre');
+                document.body.appendChild(pre);
+                pre.textContent += repaintRects;
+
                 testRunner.notifyDone();
+            }
         })
     })
 };
