--- a/LayoutTests/fast/repaint/background-size-auto-with-gradient-and-height-changes.html
+++ b/LayoutTests/fast/repaint/background-size-auto-with-gradient-and-height-changes.html
@@ -33,7 +33,7 @@ function start() {
         return;
 
     window.internals.startTrackingRepaints(document);
-    window.testRunner.display();
+    var dummy = document.body.offsetTop;
 }
 
 function logRepaints() {
