--- a/LayoutTests/compositing/webgl/webgl-repaint.html
+++ b/LayoutTests/compositing/webgl/webgl-repaint.html
@@ -12,6 +12,7 @@ canvas {
     border: 1px solid black;
 }
 </style>
+<script src="../../resources/run-after-display.js"></script>
 <script>
 if (window.testRunner)
     testRunner.overridePreference("WebKitWebGLEnabled", "1");
@@ -37,11 +38,10 @@ function init()
   gl.clearColor(1, 0, 0, 1); // red
   gl.clear(gl.COLOR_BUFFER_BIT);
   if (window.testRunner) {
-      testRunner.display();
+      testRunner.waitUntilDone();
       testRunner.dumpAsTextWithPixelResults();
-      drawGreen();
-  } else
-      window.setTimeout(drawGreen, 50);
+  }
+  runAfterDisplay(drawGreen);
 }
 
 function drawGreen()
@@ -49,8 +49,7 @@ function drawGreen()
   gl.clearColor(0, 1, 0, 1); // green
   gl.clear(gl.COLOR_BUFFER_BIT);
   if (window.testRunner) {
-      testRunner.display();
-      testRunner.display();
+      testRunner.notifyDone();
   } else
       window.setInterval(function() {
         document.getElementById('canvas').classList.toggle('border');
