--- a/LayoutTests/css3/flexbox/repaint-column-reverse.html
+++ b/LayoutTests/css3/flexbox/repaint-column-reverse.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<script src="../../resources/run-after-display.js"></script>
+<script src="../../fast/repaint/resources/text-based-repaint.js"></script>
 <style>
 #flexbox {
     display: -webkit-flex;
@@ -10,25 +12,29 @@
 }
 </style>
 <script>
-function changeChildMargin()
+function repaintTest()
 {
     document.getElementById("blue").style.margin = "1px";
-    if (window.testRunner)
-        testRunner.notifyDone();
+}
+
+function changeChildMargin()
+{
+    runRepaintTest();
+    finishRepaintTest();
 }
 
 window.onload = function() {
     if (window.testRunner) {
-        testRunner.dumpAsTextWithPixelResults();
         testRunner.waitUntilDone();
-        testRunner.display();
     } else {
         document.body.appendChild(document.createTextNode(
             "This test checks that for flex items that are moved multiple times during the layout "
             + "only the initial and final positions are repainted. Only the blue flex item should be repainted "
             + "after changing its position. If the other flex items are repainted, this test fails."));
     }
-    setTimeout(changeChildMargin, 0);
+    window.enablePixelTesting = true;
+    window.testIsAsync = true;
+    runAfterDisplay(changeChildMargin)
 };
 </script>
 <div id="flexbox">
