--- a/LayoutTests/media/audio-repaint.html
+++ b/LayoutTests/media/audio-repaint.html
@@ -7,11 +7,11 @@
 <audio controls autoplay onplaying="playing(1)" src="content/silence.wav" style="margin-bottom:25px; -webkit-box-reflect:below;"></audio><br/>
 <audio controls autoplay onplaying="playing(2)" src="content/silence.wav" style="margin:27px 0; -webkit-transform: rotate(15deg);"></audio><br>
 <script>
+    // Note: can't dump repaint rects here (yet) because this is trying to
+    // test autoplaying and window.internals doesn't exist at the right time
+    // to start tracking repaint rects.
     if (window.testRunner)
         testRunner.waitUntilDone();
-
-    if (window.testRunner)
-        testRunner.display();
 
     var count = 3;
     var audioElements = document.getElementsByTagName('audio');
