DevTools: Use open resource dialog for go to line feature in sources panel.
R=lushnikov@chromium.org, lushnikov, pfeldman

Review URL: https://codereview.chromium.org/202043002

git-svn-id: svn://svn.chromium.org/blink/trunk@169530 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/jump-to-previous-editing-location.html
+++ b/LayoutTests/inspector/jump-to-previous-editing-location.html
@@ -244,7 +244,7 @@ function test()
                     panel.showUISourceCode(uiSourceCode, jumps[i]);
                     dumpSelection(panel.visibleView.textEditor, "jump to line " + jumps[i]);
                 }
-                panel.highlightPosition(40, 10);
+                panel.showUISourceCode(uiSourceCode, 40, 10);
                 dumpSelection(panel.visibleView.textEditor, "highlight line 40");
                 for (var i = 0; i < jumps.length + 1; ++i) {
                     rollback();
