DevTools: Merge highlightPosition and revealLine methods on SourceFrame.
This patch keeps highlightPosition method on SourceFrame for backwards compatibility with corresponding virtual methods on View.

R=lushnikov@chromium.org, lushnikov, pfeldman

Review URL: https://codereview.chromium.org/204323003

git-svn-id: svn://svn.chromium.org/blink/trunk@169551 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/editor/text-editor-reveal-line.html
+++ b/LayoutTests/inspector/editor/text-editor-reveal-line.html
@@ -27,7 +27,7 @@ function test()
 
     function testLineReveal(lineNumber)
     {
-        textEditor.revealLine(lineNumber);
+        textEditor.revealPosition(lineNumber);
         var firstLine = textEditor.firstVisibleLine();
         var lastLine = textEditor.lastVisibleLine();
         var lineCentered = Math.abs(2 * lineNumber - firstLine - lastLine) <= 1;
