[webcrypto] Add length parameter to HmacKeyAlgorithm. (blink)
Matches a planned change to the spec:
https://www.w3.org/Bugs/Public/show_bug.cgi?id=25094

Chromium side of this change: https://codereview.chromium.org/203303006/

BUG=245025

Review URL: https://codereview.chromium.org/204013006

git-svn-id: svn://svn.chromium.org/blink/trunk@169567 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/crypto/sign-verify.html
+++ b/LayoutTests/crypto/sign-verify.html
@@ -94,6 +94,7 @@ function runSuccessTestCase(testCase)
         shouldBe("tmpKey.extractable", "false")
         shouldBe("tmpKey.algorithm.name", "'HMAC'")
         shouldBe("tmpKey.algorithm.hash.name", "'" + testCase.algorithm + "'")
+        shouldEvaluateTo("tmpKey.algorithm.length", keyData.length * 8);
         shouldBe("tmpKey.usages.join(',')", "'sign,verify'")
 
         // (2) Sign.
