--- a/LayoutTests/fast/sub-pixel/nested-sub-pixel-composited-layers-expected.html
+++ b/LayoutTests/fast/sub-pixel/nested-sub-pixel-composited-layers-expected.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 <style>
-#subPixelContainer {
+.subPixelContainer {
     left: 10.5px;
     width: 100px;
     height: 100px;
     position: relative;
     -webkit-transform: translateZ(0);
 }
-#ref {
+.overflowHidden {
+    overflow: hidden;
+}
+.ref {
     position: absolute;
     width: 50.5px;
     right: 0px;
@@ -20,6 +23,9 @@
 </head>
 <body>
 <div>This tests that sub-pixel offsets in nested composited layers are properly accumulated. You should see no red.</div>
-<div id="subPixelContainer">
-    <div id="ref"></div>
+<div class="subPixelContainer">
+    <div class="ref"></div>
+</div>
+<div class="subPixelContainer overflowHidden">
+    <div class="ref"></div>
 </div>
