--- a/LayoutTests/fast/sub-pixel/nested-sub-pixel-composited-layers.html
+++ b/LayoutTests/fast/sub-pixel/nested-sub-pixel-composited-layers.html
@@ -2,31 +2,38 @@
 <html>
 <head>
 <style>
-#subPixelContainer {
+.subPixelContainer {
     left: 10.5px;
     width: 100px;
     height: 100px;
     position: relative;
     -webkit-transform: translateZ(0);
 }
-#subPixelContainer > div {
+.subPixelContainer > div {
     position: absolute;
     width: 50.5px;
     right: 0px;
     height: 50px;
 }
-#test {
+.overflowHidden {
+    overflow: hidden;
+}
+.test {
     -webkit-transform: translateZ(0);
     background-color: green;
 }
-#ref {
+.ref {
     background-color: red;
 }
 </style>
 </head>
 <body>
 <div>This tests that sub-pixel offsets in nested composited layers are properly accumulated. You should see no red.</div>
-<div id="subPixelContainer">
-    <div id="ref"></div>
-    <div id="test"></div>
+<div class="subPixelContainer">
+    <div class="ref"></div>
+    <div class="test"></div>
+</div>
+<div class="subPixelContainer overflowHidden">
+    <div class="ref"></div>
+    <div class="test"></div>
 </div>
