Web Animations API: Fix KeyframeEffectModel::PropertySpecificKeyframeGroup::addSyntheticKeyframeIfRequired
Synthetic Keyframes:
For each property declared in a KeyframeEffectModel, addSyntheticKeyframeIfRequired adds
a property specific keyframe at offset: 0 if none exists. Similarly, it adds a keyframe
at offset: 1 if required.

The synthetic keyframes have compositeOperation add, and a neutral value for the property.

Partial Keyframes:
Previously, if an animation was constructed with a partial keyframe (a keyframe list with no 
keyframe at offset zero or no keyframe at offset one for any of the properties it declares) 
the renderer would crash. 

This change detects partial keyframes and throws a NotSupportedError in the JavaScript.

Review URL: https://codereview.chromium.org/203463009

git-svn-id: svn://svn.chromium.org/blink/trunk@169626 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/web-animations-api/element-animate-list-of-keyframes.html
+++ b/LayoutTests/web-animations-api/element-animate-list-of-keyframes.html
@@ -51,10 +51,8 @@ test(function() {
 }, 'Calling animate() should start an animation. CamelCase property names should be parsed.');
 
 var keyframesWithInvalid = [
-        {offset: 0.1},
-        {width: '0px', backgroundColor: 'octarine', offset: 0.2},
-        {width: '1000px', foo: 'bar', offset: 1}
-        ];
+        {width: '0px', backgroundColor: 'octarine', offset: 0},
+        {width: '1000px', foo: 'bar', offset: 1}];
 
 test(function() {
     var player = e3.animate(keyframesWithInvalid, {duration: durationValue, fill: 'forwards'});
