Explicitly mark first 2 args of addEventListener/removeEventListener as optional
addEventListener and removeEventListener should require 2 arguments
(per spec), but legacy content calls these with 0 or 1 arguments.

For background, see this bug:
https://code.google.com/p/chromium/issues/detail?id=249598

This results in a special case in the CG, and an IDL that doesn't reflect
reality.

This updates the IDL to reflect reality, and removes the special-casing
from the CG, removing 3 FIXMEs!

There's now only 1 EventTarget FIXME in the templates, namely
the frame security check (on window).

This changes
addEventListener.length
removeEventListener.length
...from 2 to 0, reflecting reality.

R=haraken
BUG=345503
BUG=249598

Review URL: https://codereview.chromium.org/203603005

git-svn-id: svn://svn.chromium.org/blink/trunk@169631 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/dom/event-target-arguments.html
+++ b/LayoutTests/fast/dom/event-target-arguments.html
@@ -21,15 +21,21 @@ shouldNotThrow('document.addEventListener("", function(){})');
 shouldNotThrow('document.addEventListener("bar", listener, false)');
 shouldNotThrow('document.addEventListener("bar", listener, true)');
 // null
+shouldBe('document.addEventListener(null)', 'undefined');
 shouldNotThrow('document.addEventListener(null, listener)'); // converted to "null"
 // FIXME: throw on |null|: http://crbug.com/249598
 // shouldThrow('document.addEventListener("foo", null)');
+shouldBe('document.addEventListener("foo", null)', 'undefined');
 shouldNotThrow('document.addEventListener("zork", listener, null)');
 // undefined
-// FIXME: behavior of undefined here is unclear, but probably should throw
+// FIXME: behavior of undefined for mandatory arguments is unclear, but
+// probably should throw
 // https://www.w3.org/Bugs/Public/show_bug.cgi?id=23532
+shouldBe('document.addEventListener(undefined)', 'undefined');
 // shouldThrow('document.addEventListener(undefined, listener)');
 // shouldThrow('document.addEventListener("foo", undefined)');
+shouldBe('document.addEventListener(undefined, listener)', 'undefined');
+shouldBe('document.addEventListener("foo", undefined)', 'undefined');
 shouldNotThrow('document.addEventListener("zork", listener, undefined)');
 
 debug('');
@@ -44,16 +50,22 @@ shouldNotThrow('document.removeEventListener("foo", listener)');
 shouldNotThrow('document.removeEventListener("foo", listener, true)');
 shouldNotThrow('document.removeEventListener("bar", listener, false)');
 shouldNotThrow('document.removeEventListener("bar", listener, false)');
-shouldNotThrow('document.addEventListener("bar", listener, true)');
+shouldNotThrow('document.removeEventListener("bar", listener, true)');
 // null
+shouldBe('document.removeEventListener(null)', 'undefined');
 shouldNotThrow('document.removeEventListener(null, listener)'); // converted to "null"
 // FIXME: throw on |null|: http://crbug.com/249598
 // shouldThrow('document.removeEventListener("foo", null)');
+shouldBe('document.removeEventListener("foo", null)', 'undefined');
 shouldNotThrow('document.removeEventListener("zork", listener, null)');
 // undefined
-// FIXME: behavior of undefined here is unclear, but probably should throw
+// FIXME: behavior of undefined for mandatory arguments is unclear, but
+// probably should throw
 // https://www.w3.org/Bugs/Public/show_bug.cgi?id=23532
-// shouldThrow('document.removeEventListener("foo", undefined)');
-// shouldThrow('document.removeEventListener(undefined, listener)');
+shouldBe('document.removeEventListener(undefined)', 'undefined');
+// shouldthrow('document.removeeventlistener("foo", undefined)');
+// shouldthrow('document.removeeventlistener(undefined, listener)');
+shouldBe('document.removeEventListener(undefined, listener)', 'undefined');
+shouldBe('document.removeEventListener("foo", undefined)', 'undefined');
 shouldNotThrow('document.removeEventListener("zork", listener, undefined)');
 </script>
