Fix relative paths in flaky EME tests
BUG=354146

Review URL: https://codereview.chromium.org/206023003

git-svn-id: svn://svn.chromium.org/blink/trunk@169634 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/media/encrypted-media/prefixed/encrypted-media-not-loaded.html
+++ b/LayoutTests/media/encrypted-media/prefixed/encrypted-media-not-loaded.html
@@ -34,7 +34,7 @@
             testDOMException("video.webkitCancelKeyRequest('webkit-org.w3.clearkey')", "DOMException.INVALID_STATE_ERR");
             run("video.canPlayType('audio/wav', 'webkit-org.w3.clearkey')");
 
-            video.setAttribute("src", findMediaFile("video", "../content/test"));
+            video.setAttribute("src", findMediaFile("video", "../../content/test"));
 
             consoleWrite("<br>'src' has been set, but loading has not yet started. Verify that all methods except canPlayType() throw INVALID_STATE_ERR.");
 
