--- a/LayoutTests/media/encrypted-media/prefixed/encrypted-media-syntax.html
+++ b/LayoutTests/media/encrypted-media/prefixed/encrypted-media-syntax.html
@@ -69,7 +69,7 @@
             testDOMException("video.webkitCancelKeyRequest('com.example.invalid')", "DOMException.INVALID_STATE_ERR");
 
             // FIXME(82952): Add "test-encrypted" file.
-            video.setAttribute("src", findMediaFile("video", "../content/test"));
+            video.setAttribute("src", findMediaFile("video", "../../content/test"));
             consoleWrite("");
             waitForEvent('loadstart', loadStarted);
         </script>
