--- a/LayoutTests/editing/spelling/spelling-hasspellingmarker.html
+++ b/LayoutTests/editing/spelling/spelling-hasspellingmarker.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <script src="../../resources/js-test.js"></script>
+<script src="../editing.js"></script>
 </head>
 <body>
-<p id="description"></p>
-<div id="console"></div>
 <script src="script-tests/spelling-hasspellingmarker.js"></script>
 </body>
 </html>
