DevTools: Extract SourcesEditor from SourcesPanel.
This extracts everything related to our tabbed editor from the sources panel to the separate SourcesEditor class.
This class could be later refactored into the view that could be embedded in other places (e.g. Drawer).

R=pfeldman, lushnikov

Review URL: https://codereview.chromium.org/206063003

git-svn-id: svn://svn.chromium.org/blink/trunk@169653 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/jump-to-previous-editing-location.html
+++ b/LayoutTests/inspector/jump-to-previous-editing-location.html
@@ -10,15 +10,18 @@ function test()
 {
     WebInspector.inspectorView.showPanel("sources");
     var panel = WebInspector.panels.sources;
+    var sourcesEditor = panel._sourcesEditor;
+    var historyManager = sourcesEditor._historyManager;
+    var editorContainer = sourcesEditor._editorContainer;
 
     function rollback()
     {
-        panel._historyManager.rollback();
+        historyManager.rollback();
     }
 
     function rollover()
     {
-        panel._historyManager.rollover();
+        historyManager.rollover();
     }
 
     function dumpSelection(editor, label)
@@ -158,8 +161,8 @@ function test()
 
         function testCloseCrossFile(next)
         {
-            var selectedTab = panel._editorContainer._tabbedPane.selectedTabId;
-            panel._editorContainer._tabbedPane.closeTab(selectedTab);
+            var selectedTab = editorContainer._tabbedPane.selectedTabId;
+            editorContainer._tabbedPane.closeTab(selectedTab);
             dumpSelection(panel.visibleView.textEditor, "Close active tab");
             for (var i = 0; i < 1; ++i) {
                 rollback();
