Remove HeapSnapshotItemIterator.rewind
We don't actually need to rewind iterators. The iterators should be one-pass only and rewind just complicates the code.

BUG=None

Review URL: https://codereview.chromium.org/206393004

git-svn-id: svn://svn.chromium.org/blink/trunk@169654 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/profiler/heap-snapshot.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot.html
@@ -49,7 +49,7 @@ function test()
                 var nodeRoot = snapshot.createNode(snapshot._rootNodeIndex);
                 var iterator = new WebInspector.HeapSnapshotNodeIterator(nodeRoot);
                 var names = [];
-                for (iterator.rewind(); iterator.hasNext(); iterator.next())
+                for (; iterator.hasNext(); iterator.next())
                     names.push(iterator.item().name());
                 InspectorTest.assertEquals(",A,B,C,D,E", names.join(","), "node iterator");
             },
@@ -71,8 +71,7 @@ function test()
                 var snapshot = InspectorTest.createJSHeapSnapshotMockObject();
                 var nodeRoot = snapshot.createNode(snapshot._rootNodeIndex);
                 var names = [];
-                var iterator = nodeRoot.edges();
-                for (iterator.rewind(); iterator.hasNext(); iterator.next())
+                for (var iterator = nodeRoot.edges(); iterator.hasNext(); iterator.next())
                     names.push(iterator.item().name());
                 InspectorTest.assertEquals("a,b", names.join(","), "edge iterator");
                 var nodeE = snapshot.createNode(15);
