DevTools: Get rid of WebInspector.ConsoleModel.UIDelegate
BUG=

Review URL: https://codereview.chromium.org/206253005

git-svn-id: svn://svn.chromium.org/blink/trunk@169667 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/command-line-api-inspect.html
+++ b/LayoutTests/http/tests/inspector/command-line-api-inspect.html
@@ -35,7 +35,7 @@ function test()
     InspectorTest.runTestSuite([
         function testRevealElement(next)
         {
-            InspectorTest.addSniffer(WebInspector.Revealer, "reveal", step2);
+            InspectorTest.addSniffer(WebInspector.Revealer, "reveal", step2, true);
             evalAndDump("inspect($('#p1'))");
 
             function step2(node)
