Simplify CompositingReasonFinder::requiresCompositingForFrame
This CL removes an optimization whereby 0x0 iframes wouldn't get a composited
layer even if they would otherwise have been composited. This optimization was
causing a bunch of awkwardness because it introduced a dependency on layout
information in the CompositingReasonFinder, which caused the reason finder to
need to set a dirty bit in the RenderLayerCompositor.

This CL also prepares us to remove requiresCompositingForFrame into a
RenderPart-specific override of additionalCompositingReasons (after
https://codereview.chromium.org/197533013/ lands).

This CL also changes RenderLayerCompositor::enableCompositingMode to notify
iframes when the root layer is destroyed as well instead of relying upon the
CompositingReasonFinder to write the dirty bit.

R=vollick@chromium.org

Review URL: https://codereview.chromium.org/206243003

git-svn-id: svn://svn.chromium.org/blink/trunk@169679 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/compositing/iframes/iframe-size-to-zero.html
+++ b/LayoutTests/compositing/iframes/iframe-size-to-zero.html
@@ -46,10 +46,10 @@
             if (window.testRunner) {
                 var haveLayers = window.internals.layerTreeAsText(document) != "";
                 var result;
-                if (hadLayers && !haveLayers)
-                  result = "PASS: had layers, and now do not";
+                if (hadLayers && haveLayers)
+                  result = "PASS: Had layers before and after";
                 else
-                  result = "FAIL: layers should have gone. hadLayers = " + hadLayers + ", haveLayers = " + haveLayers;
+                  result = "FAIL: Layers should have stayed. hadLayers = " + hadLayers + ", haveLayers = " + haveLayers;
                 document.getElementById('result').innerHTML = result;
                 testRunner.notifyDone();
             }
