[CSS Grid Layout] Vertical rectangles not recognized as valid grid areas
Grid areas sized as vertical rectangles were incorrectly considered as
invalid by the parser. That's because the condition checking that each new
row was adjacent to the previous one was using the first row of the
currently parsed grid area instead of the last one.

Review URL: https://codereview.chromium.org/203963008

git-svn-id: svn://svn.chromium.org/blink/trunk@169699 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/css-grid-layout/grid-template-areas-get-set.html
+++ b/LayoutTests/fast/css-grid-layout/grid-template-areas-get-set.html
@@ -29,6 +29,18 @@
     grid-template-areas: "header ."
                          "footer .";
 }
+
+#gridWithHorizontalRectangle {
+    grid-template-areas: "a a a"
+                         "a a a";
+}
+
+#gridWithVerticalRectangle {
+    grid-template-areas: "a a"
+                         "a a"
+                         "a a";
+}
+
 </style>
 <script src="../../resources/js-test.js"></script>
 </head>
@@ -40,6 +52,8 @@
 <div class="grid" id="gridWithSpanningColumnsTemplate"></div>
 <div class="grid" id="gridWithSpanningRowsDotTemplate"></div>
 <div class="grid" id="gridWithDotColumn"></div>
+<div class="grid" id="gridWithHorizontalRectangle"></div>
+<div class="grid" id="gridWithVerticalRectangle"></div>
 <script>
     description("This test checks that grid-template-areas is properly parsed.");
 
@@ -64,6 +78,12 @@
 
     var gridWithDotColumn = document.getElementById("gridWithDotColumn");
     shouldBeEqualToString("window.getComputedStyle(gridWithDotColumn).getPropertyValue('grid-template-areas')", '"header ." "footer ."')
+
+    var gridWithHorizontalRectangle = document.getElementById("gridWithHorizontalRectangle");
+    shouldBeEqualToString("window.getComputedStyle(gridWithHorizontalRectangle).getPropertyValue('grid-template-areas')", '"a a a" "a a a"');
+
+    var gridWithVerticalRectangle = document.getElementById("gridWithVerticalRectangle");
+    shouldBeEqualToString("window.getComputedStyle(gridWithVerticalRectangle).getPropertyValue('grid-template-areas')", '"a a" "a a" "a a"');
 
     debug("Test grid-template-areas: initial");
     var element = document.createElement("div");
